--- a/css/estilos.css
+++ b/css/estilos.css
@@ -1,16 +1,8 @@
-@font-face{
+@font-face {
     font-family: "Permanent Marker", cursive;
-    src: url('../fonts/PermanentMarker-Regular.ttf');
-}
-
-@font-face{
-    font-family: "Sedgwick Ave Display", cursive;
-    src: url('../fonts/SedgwickAveDisplay-Regular.ttf');
-}
-
-@font-face{
-    font-family: "Rock Salt", cursive;
-    src: url('../fonts/RockSalt-Regular.ttf');
+    /*src: url('fonts/PermanentMarker-Regular.ttf');*/
+src: url('fonts/PermanentMarker-Regular.ttf');
+    
 }
 
 * {
@@ -19,23 +11,80 @@
     padding: 0px;
 }
 
-:root{
+:root {
     font-size: 20px;
 }
 
-/*-------PARA OBRAS HTML-----------*/
-.contenedor {
-    width: 660px;
-    height: 600px;
-    /*background-color: rgb(124, 144, 112);*/
+h1 {
+    font-family: Verdana, arial, Tahoma, sans-serif;
+    color: orange;
     background-color: #006600;
+    text-align: center;
+    font-size: 4rem;
 }
 
-.disco {
-    width: 200px;
-    height: 200px;
+
+h4 {
+    font-family: "Permanent Marker";
+    color: rgb(254, 232, 176);
+    background-color: #006600;
+    text-align: center;
+    font-size: 4rem;
+}
+
+h5 {
+    /*PALETA COPADA*/
+    background-color: rgb(249, 123, 34);
+    /*#F97B22*/
+    background-color: rgb(254, 232, 176);
+    /*#FEE8B0*/
+    background-color: rgb(124, 144, 112);
+    /*#9CA777  */
+    background-color: rgb(156, 167, 119);
+    /*#7C9070*/
+}
+
+/*-------PARA OBRAS HTML-----------*/
+/*
+.contenedor {
+    width: 600px;
+    height: 1200px;
+    background-color: red;
+}
+*/
+.disco_portrait {
+    width: 203px;
+    height: 202px;
     margin: 5px;
+    border: rgb(249, 123, 34) solid 1.5px;
     display: inline-block;
+
+    animation-name: ejemplo;
+    animation-duration: 3s;
+    animation-delay: 0.5s;
+    animation-iteration-count: infinite;
+}
+
+@keyframes ejemplo {
+    0% {
+        border: rgba(249, 123, 34, 1) solid 1.5px;
+    }
+
+    25% {
+        border: rgba(249, 123, 34, 0.75) solid 1.5px;
+    }
+
+    50% {
+        border: rgba(249, 123, 34, 0.50) solid 1.5px;
+    }
+
+    75% {
+        border: rgba(249, 123, 34, 0.25) solid 1.5px;
+    }
+}
+
+.disco_titulo {
+    font-family: Verdana, arial, Tahoma, sans-serif;
 }
 
 #p1 {
@@ -70,17 +119,12 @@
 
 
 }
-/*--------------------------*/
-/*  EJEMPLO DE UNIDADES FLEXIBLES ¡¡¡¡RESPONSIVE!!!!
-p{
-    font-size: 5vw;
-    font-size: 5vh;
-    background-color: rgba(0,255,0,0.23);
 
-}
-*/
-/*--------------------------*/
-a{
+/*-------PARA OBRAS HTML-----^-----*/
+/*--------------------------¬|-------*/
+
+/*-|-----ENLACES---------------------*/
+a {
     font-family: "Permanent Marker", cursive;
     text-decoration: none;
     color: rgb(254, 232, 176);
@@ -91,74 +135,82 @@ a{
 }
 
 a:hover {
-font-style: oblique;
-color: blue;
+    font-style: oblique;
+    color: blue;
     background-color: #006600;
-    
+    padding: 0px;
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+
 }
-/*rgb(249, 123, 34) rgb(254, 232, 176) rgb(156, 167, 119) rgb(124, 144, 112)*/
-a:link{
+
+a:link {
+    color: red;
     background-color: #006600;
 }
 
-a:active{
+a:active {
     background-color: #006600;
 }
-a:visited{
+
+a:visited {
     color: rgb(254, 232, 176);
 }
-/* Primer hipervinculo
-:first-child 
-a:first-child{
-    color:cyan
-    font-size: xx-large;
-}*/
 
-/* Último elemento 
-:last-child 
-a:last-child{
-    color:violet;
-    font-size: xx-large;
-}*/
 
-header{
-    
+/*
+div{
+    width: 100px;
+    height: 100px;
+    background-color:lightskyblue;
+    border: 1px solid black;
+    margin-bottom: 50px;
+
+    transition-property: width;
+    transition-duration: 5s;
+    transition-delay: 1s;
+    transition-timing-function: ease-in;
+
+    transition-property: color;
+    transition-duration: 5s;
+    transition-delay: 0.5s;
+    transition-timing-function: ease-in;
+
+}
+
+div:hover{
+    width: 500px;
+}
+
+
+a:hover{
+    background-color: brown;
+    padding: 50px;
+    transition-property: all;
+    transition-duration: 4s;
+    transition-timing-function: ease-in;
+}
+*/
+/*--------ETIQUETAS SEMANTICAS------------*/
+
+header {
     font-family: "Permanent Marker";
-    color: orange;
     background-color: #006600;
-    font-size: 4rem;
+    font-size: 5rem;
     text-align: center;
-
-}
-
-h1{
-    font-family: Verdana, arial, Tahoma, sans-serif;
-    color: orange;
-    background-color: #006600;
-    text-align: center;
-    font-size: 4rem;
-}
-
-h2{
-    font-family: "Sedgwick Ave Display";
-    font-size: 2rem;
-}
-
-h4{
-    font-family: "Permanent Marker";
-    color: rgb(254, 232, 176);
-    background-color: #006600;
-    text-align: center;
-    font-size: 2rem;
+    margin-top: 0%;
+    padding: 0%;
 }
 
 body {
     font-family: Verdana, arial, Tahoma, sans-serif;
     color: orange;
     background-color: #006600;
-    
+
 }
 
+/*
 nav {
     font-family: 'Sedgwick Ave Display';
     font-size: 1.5rem;
@@ -166,9 +218,17 @@ nav {
     background-color: #006600;
     text-align: center;
 }
+*/
 
-.nav__btn{
+.nav__btn {
     color: rgb(254, 232, 176);
+    background-color: #006600;
+    text-align: center;
+    font-size: 2rem;
+}
+
+.nav__btn:hover {
+    color: blue;
     background-color: #006600;
     text-align: center;
     font-size: 2rem;
@@ -178,9 +238,187 @@ main {
     max-width: 800px;
     width: 90%;
     margin: auto;
-    padding: 40px;
+   /* padding: 40px;*/
+}
+/*-- ^   -----ETIQUETAS SEMANTICAS------------*/
+/*-- |  -----ETIQUETAS SEMANTICAS------------*/
+
+/*----------------------------------*/
+/*-------------GRID AREAS------------*/
+/* Definir el tamaño de fuente 62.5%
+en el html */
+html{     font-size: 62.5%; /*10px*/}
+
+/* Definir las propiedades para el contenedor
+máximo ancho 120rem
+display
+tamaño de 3 columnas con repeat()
+tamaño de 4 filas con repeat() y auto ajuste
+áreas con grid-template-areas
+margen derecho e izquierdo auto ajuste
+separación columnas y filas con gap*/
+.contenedor{
+    font-family: "Permanent Marker", cursive;
+    /*max-width: 120rem;*/
+    max-width: 90rem;
+    max-height:180rem;
+    display: grid;
+    padding: 0%;
+  /*  background-color: #bed1f3;*/
+  background-color: #006600;
+    grid-template-columns: repeat(4, 1fr);
+    grid-template-rows: repeat(6, auto);
+   grid-template-areas: 
+   "cabeza   cabeza   cabeza cabeza"
+   "nav       nav      nav     nav"
+   "bloque1   main    main   sidebar"
+   "bloque1   main    main   sidebar"
+   "bloque1  main  main   sidebar"
+   "footer   footer    footer footer";
+   margin-right: auto;
+   margin-left: auto;
+   gap: 0.1%;
 }
 
+/* Partiendo del contenedor
+.contenedor .elemento
+Definir el nombre de cada área 
+con la propiedad grid-area indicando el nombre 
+sin comillas
+color fondo #12203e cabeza y pie
+color fuente
+alto en vh
+Nota: sidebar sin altura
+ */
+/* Accedo a la clase */
+.contenedor .header{
+    font-family: "Permanent Marker";
+    grid-area: cabeza;
+    background-color: #006600;
+    color: orange;
+    height: 10vh;
+    width: 70%;
+    text-align: center;
+    margin-top: 0%;
+    font-size: 5rem;
+    margin-top: 0%;
+    padding: 0%;
+
+ }
+
+ .contenedor .nav{
+    font-family:"Permanent Marker", cursive;
+    grid-area: nav;
+    background-color: #006600;
+    color: white;
+    height: 6vh;
+    width: 100vh;
+    text-align: center;
+ }
+
+.contenedor .main{
+    grid-area: main;
+    /*background-color:blueviolet;*/
+    background-color: #006600;
+    color: orange;
+    height: 100vh;
+    margin-top: 3vh;
+   
+ }
+
+.contenedor .sidebar{
+    grid-area: sidebar;
+    background-color:orangered;
+    color: white;
+   
+ }
+
+.contenedor .bloque1{
+    grid-area: bloque1;
+    background-color: aquamarine;
+    color:black;
+    height: 15vh;
+ }
+
+.contenedor .bloque2{
+    grid-area: bloque2;
+    background-color:antiquewhite;
+    color:black;
+    height: 15vh;
+   
+ }
+
+.contenedor .footer{
+    grid-area: footer;
+    background-color: #006600;
+    color: orange;
+    width: 100%;
+    height: 14vh;
+    margin-top: 10%;
+ }
+
+
+/*--  ^  ------GRID AREAS------------*/
+/*--  |  ------GRID AREAS------------*/
+.box_img_disco {
+    width: 255px;
+    height: 255px;
+    margin: 0px 0px 0px 10px;
+    padding: 0px;
+    border: rgb(249, 123, 34) solid 3px;
+    display: inline-block;
+    animation-name: ejemplo;
+    animation-duration: 1s;
+    animation-delay: 0.5s;
+    animation-iteration-count: infinite;
+    background-color: #006600;
+}
+
+.box_titulo_disco {
+    margin: 0px;
+    height: 1.5vh;
+    width: 26vh;
+    padding: 0px;
+    background-color: #006600;
+    color: rgb(254, 232, 176);
+    /*    display: inline-block;*/
+    text-align: left;
+    border: 1px solid black;
+    border-radius: 0px;
+}
+
+.contenedortpo {
+    /*height: 90vh;*/
+    height: 600px;
+    background-color: #bed1f3;
+    display: grid;
+    border: #fff solid 10px;
+    margin: 0%;
+    padding: 0%;
+    /* Responsive correcto: repeat(auto-fit, minmax(px,1fr)) */
+    grid-template-columns: repeat(auto-fit, minmax(250px, 1fr));
+    /*grid-template-columns: repeat(3, minmax(250px, 1fr)); */
+    grid-template-rows: repeat(1, 1fr);
+    grid-auto-rows: 1fr;
+
+    justify-content: center;
+    /* Eje horizontal*/
+    align-content: center;
+    /* Eje vertical*/
+    gap: 0.1%
+}
+
+#disco_Home{
+    background-color: #006600;
+text-align: center;
+/*border: 1px solid rgb(187, 238, 46);*/
+
+}
+
+
+
+
+/*-----------FORMULARIO------------*/
 .formulario {
     display: grid;
     grid-template-columns: 1fr;
@@ -312,6 +550,8 @@ main {
 .formulario__grupo-incorrecto .formulario__input {
     border: 3px solid #bb2929;
 }
+/*-- ^   -----FORMULARIO------------*/
+/*-- |  -----FORMULARIO------------*/
 
 /* ----- -----  Mediaqueries ----- ----- */
 @media screen and (max-width: 800px) {
@@ -331,52 +571,27 @@ main {
 }
 
 /* -------Selector por ID-------------*/
-#nombre{
+#nombre {
     color: black;
     font-weight: 700;
 }
 
-#email{
+#email {
     color: black;
     font-weight: 700;
 }
 
-#asunto{
+#asunto {
     color: black;
     font-weight: 700;
 }
 
-#comentario{
+#comentario {
     color: black;
-    font-weight: 700;
+    font-weight: 900;
 }
 
-
-/* ----- -----  Mediaqueries ----- ----- */
 /*
-@media screen and (max-width: 800px) {
-    .formulario {
-        grid-template-columns: 1fr;
-    }
-
-    .formulario__grupo-terminos,
-    .formulario__mensaje,
-    .formulario__grupo-btn-enviar {
-        grid-column: 1;
-    }
-
-    .formulario__btn {
-        width: 100%;
-    }
-}
-*/
-/*  EJEMPLO DE UNIDADES FLEXIBLES ¡¡¡¡RESPONSIVE!!!!
-p{
-    font-size: 5vw;
-    font-size: 5vh;
-    background-color: rgba(0,255,0,0.23);
-
-}
 //EJEMPLO DE DESBORDE PARA PONER SCROLL
 .desborde{
     width: 300px;
@@ -385,3 +600,134 @@ p{
     overflow:scroll;
 }
 */
+
+
+/*--------------------------*/
+/*  EJEMPLO DE UNIDADES FLEXIBLES ¡¡¡¡RESPONSIVE!!!!
+p{
+    font-size: 5vw;
+    font-size: 5vh;
+    background-color: rgba(0,255,0,0.23);
+
+
+SACAR ANIMACIONES DE ACA
+https://animate.style/ 
+
+En un celular nos puede interesar que determinado contenido ocupe todo el
+ancho de la pantalla, pero al pasar a un TV 4K podríamos cambiar de idea. Por
+ejemplo podríamos tener un width:100%, pero con un max width: 1000px.
+}
+
+Texto responsivo
+Recordemos que el tamaño del texto se puede configurar con una unidad "vw",
+que es el "ancho de la ventana gráfica". De esa forma, el tamaño del texto seguirá
+el tamaño de la ventana del navegador.
+Viewport es el tamaño de la ventana del navegador.
+1vw = 1% del ancho de la ventana gráfica.
+
+Imágenes responsivas
+Las imágenes responsivas son imágenes que se escalan bien para adaptarse a
+cualquier tamaño de navegador.
+Si la propiedad CSS width se establece en 100%, la imagen responderá y se
+ampliará y reducirá.
+Una imagen grande puede ser perfecta en una pantalla de computadora grande,
+pero inútil en un dispositivo pequeño. ¿Por qué cargar una imagen grande
+cuando tiene que reducirla de todos modos? Para reducir la carga, o por
+cualquier otro motivo, puede utilizar media queries para mostrar diferentes
+imágenes en diferentes dispositivos. +info
+
+/*
+Puntos de corte (según ancho):
+- Hasta 600 px: Fondo rojo
+- Desde 600 px: Fondo verde
+- Desde 768 px: Fondo azul
+- Desde 992 px: Fondo naranja
+- Desde 1200 px: Fondo rosa
+
+Puntos de corte (Breakpoints)
+400px X 600px Extra small devices (phones,600px and down)
+650px X 400px Small devices (portrait tablets and large phones, 600px and up)
+850px X 600px Medium devices (landscape tablets, 768px and up)
+1000px X 800px Large devices (laptops/desktops, 992px and up)
+1300px X 800px Extra large devices (large laptops and desktops, 1200px and up)
+
+/* @media screen and (ancho: valor){
+    selector{propiedad: valor;}
+    
+} */
+
+/* Celular */
+/*
+@media screen and (max-width:600px) {
+    body{
+        background-color: aquamarine;
+    }
+    h1{
+        font-family: Impact, Haettenschweiler, 'Arial Narrow Bold', sans-serif;
+    }
+}
+*/
+/* Tablets */
+/*
+@media screen and (min-width:600px) and (max-width:850px) {
+    body{
+        background-color:deepskyblue;
+    }
+    h1{
+        font-style: italic;
+    }
+}
+*/
+
+/* Color de fondo al main */
+/*
+main{
+    background-color: aquamarine;
+    height: 50vh;
+}
+*/
+
+/* Definir las dimensiones 
+de los flex-items
+y color de fondo */
+/*
+.flex-items{
+    width: 100px;
+    height: 50px;
+    background-color: darkcyan;
+    border: 1px solid black;
+}
+*/
+
+/* Definir para el
+contenedor las propiedades
+display
+para justificar 
+altura 
+alinear los items */
+/*
+.flex-contenedor{
+    display: flex;
+    justify-content:center; //Eje horizontal
+    height: 50%;
+    background-color: burlywood;
+    align-items:center;  //Eje vertical
+    column-gap: 10px;
+    flex-wrap: wrap;
+}
+*/
+/*
+@media screen and (max-width:600px){
+    .flex-contenedor{
+        display: flex;
+        flex-direction: column;
+        height: 70%;
+        row-gap: 10px;
+        justify-content:center;       
+        
+    }
+    
+}
+
+*/
+/*--------------------------*/
