Todo site con area grids

--- a/css/estilos.css
+++ b/css/estilos.css
@@ -411,9 +411,13 @@ Nota: sidebar sin altura
     background-color: #006600;
 text-align: center;
 /*border: 1px solid rgb(187, 238, 46);*/
-
 }
 
+#producer_E87_portrait{
+    background-color: #006600;
+text-align: center;
+/*border: 1px solid rgb(187, 238, 46);*/
+}
 
 
 
