--- a/css/music.css
+++ b/css/music.css
@@ -81,6 +81,20 @@ a:hover {
     /*font-style: oblique;*/
     color: white;
     background-color: #006600;
+    /*
+    animation: tagEffect 3s infinite;
+    animation-timing-function: cubic-bezier(1, 0, 0, 1);
+*/
+
+
+
+
+    /*padding: 0px;*/
+    /*
+    transition-property: all;
+    transition-duration: 0.3s;
+    transition-timing-function: ease-in;
+*/
 }
 
 a:link {
@@ -90,6 +104,7 @@ a:link {
 
 a:active {
     background-color: #006600;
+    color:rgb(249, 123, 34);
 }
 
 a:visited {
@@ -554,6 +569,116 @@ main {
     margin-left: 60px;
 }
 
+/*------------------------------------*/
+/*--------------------------*/
+/*CARROUSEL*/
+* {
+    box-sizing: border-box
+}
+
+body {
+    margin: 0
+}
+
+.mySlides {
+    display: none
+}
+
+img {
+    vertical-align: middle;
+}
+
+/* Slideshow container */
+.slideshow-container {
+    max-width: 600px;
+    position: relative;
+    margin: auto;
+}
+
+/* Next & previous buttons */
+.prev,
+.next {
+    cursor: pointer;
+    position: absolute;
+    top: 50%;
+    width: auto;
+    padding: 16px;
+    margin-top: -22px;
+    color: white;
+    font-weight: bold;
+    font-size: 18px;
+    transition: 0.6s ease;
+    border-radius: 0 3px 3px 0;
+    user-select: none;
+}
+
+/* Position the "next button" to the right */
+.next {
+    right: 0;
+    border-radius: 3px 0 0 3px;
+}
+
+/* On hover, add a black background color with a little bit see-through */
+.prev:hover,
+.next:hover {
+    background-color: rgba(0, 0, 0, 0.8);
+}
+
+/* Caption text */
+.text {
+    color: red;
+    font-size: 15px;
+    padding: 8px 12px;
+    position: absolute;
+    bottom: 8px;
+    width: 100%;
+    text-align: center;
+}
+
+/* Number text (1/3 etc) */
+.numbertext {
+    color: #f2f2f2;
+    font-size: 12px;
+    padding: 8px 12px;
+    position: absolute;
+    top: 0;
+}
+
+/* The dots/bullets/indicators */
+.dot {
+    cursor: pointer;
+    height: 15px;
+    width: 15px;
+    margin: 0 2px;
+    background-color: #bbb;
+    border-radius: 50%;
+    display: inline-block;
+    transition: background-color 0.6s ease;
+}
+
+.active,
+.dot:hover {
+    background-color: #717171;
+}
+
+/* Fading animation */
+.fade {
+    animation-name: fade;
+    animation-duration: 1.5s;
+}
+
+@keyframes fade {
+    from {
+        opacity: .4
+    }
+
+    to {
+        opacity: 1
+    }
+}
+
+/*--------------------------------*/
+
 /*---------ESPECIFICO DE BIO---------------*/
 #producere87_selfie {
     background-color: #006600;
@@ -825,6 +950,7 @@ main {
         margin-right: 50px;
     
     }
+    /* -----------------------------*/
 }
 
 
