--- a/css/brazil.css
+++ b/css/brazil.css
@@ -211,8 +211,8 @@ main {
 
 .contenedor .bloque1 {
     grid-area: bloque1;
-    background-color: #006600;
-    color: white;
+    background-color: white;
+    color: orange;
     border: red solid 2px;
     margin: 0%;
     padding: 0%;
@@ -371,10 +371,6 @@ main {
             rgba(97, 0, 254, 1) -18px -0px 8px,
             rgba(97, 0, 254, 1) -12px -0px 8px;
     }
-
-
-
-
 }
 
 @keyframes tagEffect {
@@ -572,11 +568,7 @@ main {
     border: 3px solid red;
 }
 
-#contenedor_texto_bio {
-    background-color: blue;
-    color: azure;
-    /*border: 3px solid */;
-}
+
 
 #face_icon {
     width: 30px;
@@ -613,231 +605,12 @@ main {
 }
 
 .audio_controls{
-    display: inline-flex;
+    display: grid;
     text-align: center;
-    border: solid 3px red;
+    border: solid 3px rgb(254, 232, 176);
+    width:500px;
+    height: 150px;
 
-}
-
-
-/*----------------------------------*/
-#nuevo_player{
-    border:pink solid 3px;
-}
-/* ----- -----  Mediaqueries ----- ----- */
-/*----Landscape (max-width: 650px) and (max-height:400px -----*/
-@media (orientation:landscape) and (max-width: 650px) and (max-height:400px) {
-
-
-.main h2 {
-        font-size: 0.98rem;
-        font-family: Garamond;
-        font-style: oblique;
-        font-weight: 900;
-        color: orange;
-        background-color: #006600;
-    }
-
-    .contenedor {
-        font-family: "Permanent Marker", cursive;
-        max-width: 90rem;
-        max-height: 180rem;
-        display: grid;
-        padding: 0%;
-        background-color: #006600;
-        grid-template-columns: repeat(4, 1fr);
-        grid-template-rows: repeat(6, auto);
-        grid-template-areas:
-            "cabeza   cabeza   cabeza cabeza"
-            "nav       nav      nav     nav"
-            "bloque1   main    main   sidebar"
-            "bloque1   main    main   sidebar"
-            "bloque1  main  main   sidebar"
-            "footer   footer    footer footer";
-        margin-right: auto;
-        margin-left: auto;
-        gap: 0.1%;
-        border: double solid blue 5px;
-
-    }
-
-    header {
-        font-family: "Permanent Marker";
-        background-color: rgba(0, 102, 0, 1);
-        font-size: 5rem;
-        text-align: center;
-        margin-top: 0%;
-        padding: 0%;
-        animation: tagEffect650x400 1s infinite;
-        animation-timing-function: cubic-bezier(1, 0, 0, 1);
-        width: 100%;
-    }
-
-
-    .contenedor .header {
-        font-family: "Permanent Marker";
-        grid-area: cabeza;
-        background-color: #006600;
-        color: orange;
-        font-size: 2rem;
-        height: 12vh;
-        width: 100vw;
-        text-align: auto;
-        overflow-y: auto;
-        margin-top: 0%;
-        margin-bottom: 0px;
-        margin-left: 0px;
-        padding: 0%;
-        /*border: aqua solid 2px;*/
-        position: relative; left:auto; top:-5px;
-
-    }
-
-    .contenedor .nav {
-        font-family: "Permanent Marker", cursive;
-        font-size: 1rem;
-        grid-area: nav;
-        background-color: #006600;
-        color: white;
-        height: 6vh;
-        width: 100vw;
-        text-align: center;
-        margin-top: 0%;
-        margin-left: 0px;
-        /*border: blue solid 1px;*/
-    }
-
-    a {
-        font-family: "Permanent Marker", cursive;
-        text-decoration: none;
-        color: rgb(254, 232, 176);
-        /*background-color: #006600;*/
-        text-align: center;
-        font-size: 1rem;
-        margin-right: 5px;
-    }
-
-    .contenedor .main {
-        grid-area: main;
-        background-color: #006600;
-        color: orange;
-        height: 78vh;
-        margin-top: 1vh;
-        /*border: cyan solid 2px;*/
-        padding: 0%;
-        overflow: scroll;
-        margin-bottom: 0px;
-    }
-
-    .contenedor .sidebar {
-        grid-area: sidebar;
-        background-color: #006600;
-        color: white;
-        border: red solid 2px;
-        margin: 0%;
-        padding: 0%;
-        overflow: scroll;
-    }
-
-    .contenedor .bloque1 {
-        grid-area: bloque1;
-        background-color: #006600;
-        color: white;
-        border: red solid 2px;
-        margin: 0%;
-        padding: 0%;
-        overflow: scroll;
-    }
-
-    .contenedor .bloque2 {
-        grid-area: bloque2;
-        background-color: antiquewhite;
-        color: black;
-        height: 15vh;
-        border: red solid 2px;
-    }
-
-    .contenedor .footer {
-        
-        grid-area: footer;
-        background-color: #006600;
-        color: orange;
-        font-size: 0.5rem;
-        width: 100%;
-        height: 10vh;
-        margin-top: 0%;
-        border: red solid 2px;
-        text-align: auto;
-    }
-
-    .contenedor .footer .icono {
-
-        width: 30px;
-        height: 30px;
-        display: inline-block;
-
-    }
-
-    /*---------ESPECIFICO DE BIO---------------*/
-    #producere87_selfie {
-        background-color: #006600;
-        text-align: auto;
-        /*border: 3px solid orangered*/;
-        width: 200px;
-        height: 200px;
-        margin-bottom: 0px;;
-
-    }
-
-    #producer_E87_portrait {
-        background-color: #006600;
-        text-align: auto;
-        width: 200px;
-        height: 200px;
-        border: 0px;
-    }
-
-    #contenedor_texto_bio,
-    h2 {
-        font-family: "Permanent Marker", cursive;
-        margin-top: 0px;
-        background-color: #006600;
-        color: orange;
-        font-size: 0.81rem;
-    }
-    #face_icon {
-        width: 20px;
-        height: 20px;
-        display: inline-block;
-        margin-left: 0px;
-        margin-right: 50px;
-        margin-top: 15px;
-    }
-    
-    #insta_icon {
-        width: 20px;
-        height: 20px;
-        display: inline-block;
-        margin-left: 0px;
-        margin-right: 50px;
-    }
-    
-    #twitter_icon {
-        width: 20px;
-        height: 20px;
-        display: inline-block;
-        margin-left: 0px;
-        margin-right: 50px;
-    }
-    
-    #youtube_icon {
-        width: 30px;
-        height: 30px;
-        display: inline-block;
-        margin-left: 0px;
-        margin-right: 50px;
-    
-    }
 }
 
 
@@ -855,3 +628,16 @@ main {
     }  
 }
 */
+/*--------------------------------*/
+/*MEDIAQUERIES*/
+@media (orientation:landscape) and (max-width:1366px) and (max-height:1024px){
+
+    .contenedor .header {
+        text-align: left;
+         }
+
+        /* .audio_controls{
+            display:inline;
+         }
+*/
+}
