--- a/css/brazil.css
+++ b/css/brazil.css
@@ -506,8 +506,7 @@ main {
 
 }
 
-@keyframes tagEffect650x400 
-{
+@keyframes tagEffect650x400 {
     0% {
         text-shadow:
             rgba(255, 255, 255, 1) 1px 0px,
@@ -523,28 +522,28 @@ main {
             rgba(0, 0, 0, 1) 10px 0px,
             rgba(255, 255, 255, 1) 11px 0px,
             rgba(255, 255, 255, 1) 12px 0px;
-        
-          
-        }
-  
-        100% {
-            text-shadow:
-                rgba(255, 255, 255, 1) 1px 0px,
-                rgba(255, 255, 255, 1) 1px 1px,
-                rgba(255, 255, 255, 1) 2px 0px,
-                rgba(0, 0, 0, 1) 3px 0px,
-                rgba(0, 0, 0, 1) 4px 0px,
-                rgba(0, 0, 0, 1) 5px 0px,
-                rgba(0, 0, 0, 1) 6px 0px,
-                rgba(0, 0, 0, 1) 7px 0px,
-                rgba(0, 0, 0, 1) 8px 0px,
-                rgba(0, 0, 0, 1) 9px 0px,
-                rgba(0, 0, 0, 1) 10px 0px,
-                rgba(255, 255, 255, 1) 11px 0px,
-                rgba(255, 255, 255, 1) 12px 0px;
- 
-              
-            }
+
+
+    }
+
+    100% {
+        text-shadow:
+            rgba(255, 255, 255, 1) 1px 0px,
+            rgba(255, 255, 255, 1) 1px 1px,
+            rgba(255, 255, 255, 1) 2px 0px,
+            rgba(0, 0, 0, 1) 3px 0px,
+            rgba(0, 0, 0, 1) 4px 0px,
+            rgba(0, 0, 0, 1) 5px 0px,
+            rgba(0, 0, 0, 1) 6px 0px,
+            rgba(0, 0, 0, 1) 7px 0px,
+            rgba(0, 0, 0, 1) 8px 0px,
+            rgba(0, 0, 0, 1) 9px 0px,
+            rgba(0, 0, 0, 1) 10px 0px,
+            rgba(255, 255, 255, 1) 11px 0px,
+            rgba(255, 255, 255, 1) 12px 0px;
+
+
+    }
 }
 
 .footer {
@@ -605,16 +604,25 @@ main {
 
 }
 
-.audio_controls{
+.audio_controls {
     display: grid;
     text-align: center;
     border: solid 3px rgb(254, 232, 176);
-    width:500px;
+    width: 500px;
     height: 150px;
 
 }
 
+#deposito_1 {
+    float: left;
+    width: 100px;
+    height: 75px;
+    margin: 10px;
+    border: 1px solid #999999;
+}
 
+
+/*---------------------------------------------*/
 /* , es para OR */
 /*
 @media (orientation:landscape) and (max-width:400px){
@@ -631,13 +639,13 @@ main {
 */
 /*--------------------------------*/
 /*MEDIAQUERIES*/
-@media (orientation:landscape) and (max-width:1366px) and (max-height:1024px){
+@media (orientation:landscape) and (max-width:1366px) and (max-height:1024px) {
 
     .contenedor .header {
         text-align: left;
-         }
+    }
 
-        /* .audio_controls{
+    /* .audio_controls{
             display:inline;
          }
 */
