--- a/css/brazil.css
+++ b/css/brazil.css
@@ -627,6 +627,28 @@ main {
 }
 
 
+#starts_btn_1,
+#stops_btn_1,
+#pause_btn_1,
+#loop_btn_1
+{
+    font-family: "Permanent Marker", cursive;
+    font-size: 1rem;
+    color: orange;
+    background-color: #006600;
+    border: 0px;
+    padding:0px;
+}
+
+#playRate_1,
+#volume_1{
+    width: 220px;
+}
+
+
+
+
+
 /*---------------------------------------------*/
 /* , es para OR */
 /*
@@ -655,3 +677,7 @@ main {
          }
 */
 }
+
+
+
+
